--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbxts/charm-payload-converter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "out/init.lua",
   "scripts": {
     "build": "rbxtsc",
@@ -33,6 +33,6 @@
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@rbxts/charm": "^0.6.0"
+    "@rbxts/charm": "0.x"
   }
 }
